Yogurt/www/css/app.css
/* ... */
.fui-credit-card:before {
  content: "\e640";
  }
.fui-clip:before {
  content: "\e641";
  }
.fui-link:before {
  content: "\e642";
  }
.fui-tag:before {
  content: "\e643";
  }
.fui-document:before {
  content: "\e644";
  }
.fui-image:before {
  content: "\e645";
  }
.fui-facebook:before {
  content: "\e646";
  }
.fui-youtube:before {
  content: "\e647";
  }
.fui-vimeo:before {
  content: "\e648";
  }
.fui-twitter:before {
  content: "\e649";
  }
.fui-spotify:before {
  content: "\e64a";
  }
.fui-skype:before {
  content: "\e64b";
  }
.fui-pinterest:before {
  content: "\e64c";
  }
.fui-path:before {
  content: "\e64d";
  }
.fui-linkedin:before {
  content: "\e64e";
  }
.fui-google-plus:before {
  content: "\e64f";
  }
.fui-dribbble:before {
  content: "\e650";
  }
.fui-behance:before {
  content: "\e651";
  }
.fui-stumbleupon:before {
  content: "\e652";
  }
.fui-yelp:before {
  content: "\e653";
  }
.fui-wordpress:before {
  content: "\e654";
  }
.fui-windows-8:before {
  content: "\e655";
  }
.fui-vine:before {
  content: "\e656";
  }
.fui-tumblr:before {
  content: "\e657";
  }
.fui-paypal:before {
  content: "\e658";
  }
.fui-lastfm:before {
  content: "\e659";
  }
.fui-instagram:before {
  content: "\e65a";
  }
.fui-html5:before {
  content: "\e65b";
  }
.fui-github:before {
  content: "\e65c";
  }
.fui-foursquare:before {
  content: "\e65d";
  }
.fui-dropbox:before {
  content: "\e65e";
  }
.fui-android:before {
  content: "\e65f";
  }
.fui-apple:before {
  content: "\e660";
  }
body {
  font-family: "Lato", Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 1.72222;
  color: #3B3B3B;
  background-color: #fff;
  height: 100%;
  margin-top: 5%;
  }
a {
  color: #16a085;
  text-decoration: none;
  -webkit-transition: .25s;
          transition: .25s;
  }
a:hover,
a:focus {
  color: #1abc9c;
  text-decoration: none;
  }
a:focus {
  outline: none;
  }
.img-rounded {
  border-radius: 6px;
  }
.img-thumbnail {
  display: inline-block;
  max-width: 100%;
  height: auto;
  padding: 4px;
  line-height: 1.72222;
  background-color: #fff;
  border: 2px solid #bdc3c7;
  border-radius: 6px;
  -webkit-transition: all .25s ease-in-out;
          transition: all .25s ease-in-out;
  }
.img-comment {
  margin: 24px 0;
  font-size: 15px;
  font-style: italic;
  line-height: 1.2;
  }
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: inherit;
  font-weight: 700;
  line-height: 1.1;
  color: inherit;
  }
h1 small,
h2 small,
h3 small,
h4 small,
h5 small,
h6 small,
.h1 small,
.h2 small,
.h3 small,
.h4 small,
.h5 small,
.h6 small {
  color: #e7e9ec;
  }
h1,
h2,
h3 {
  margin-top: 30px;
  margin-bottom: 15px;
  }
h4,
h5,
h6 {
  margin-top: 15px;
  margin-bottom: 15px;
  }
h6 {
  font-weight: normal;
  }
h1,
.h1 {
  font-size: 61px;
  }
h2,
.h2 {
  font-size: 53px;
  }
h3,
.h3 {
  font-size: 40px;
  }
h4,
.h4 {
  font-size: 29px;
  }
h5,
.h5 {
  font-size: 28px;
  }
h6,
.h6 {
  font-size: 24px;
  }
p {
  margin: 0 0 15px;
  font-size: 18px;
  line-height: 1.72222;
  }
.lead {
  margin-bottom: 30px;
  font-size: 28px;
  font-weight: 300;
  line-height: 1.46428571;
  }
@media (min-width: 768px) {
  .lead {
    font-size: 30.006px;
    }
  }
small,
.small {
  font-size: 83%;
  line-height: 2.067;
  }
.text-muted {
  color: #bdc3c7;
  }
.text-inverse {
  color: #fff;
  }
.text-primary {
  color: #1abc9c;
  }
a.text-primary:hover {
  color: #148f77;
  }
.text-warning {
  color: #f1c40f;
  }
a.text-warning:hover {
  color: #c29d0b;
  }
.text-danger {
  color: #e74c3c;
  }
a.text-danger:hover {
  color: #d62c1a;
  }
.text-success {
  color: #2ecc71;
  }
a.text-success:hover {
  color: #25a25a;
  }
.text-info {
  color: #3498db;
  }
a.text-info:hover {
  color: #217dbb;
  }
.bg-primary {
  color: #fff;
  background-color: #34495e;
  }
a.bg-primary:hover {
  background-color: #222f3d;
  }
.bg-success {
  background-color: #dff0d8;
  }
a.bg-success:hover {
  background-color: #c1e2b3;
  }
.bg-info {
  background-color: #d9edf7;
  }
a.bg-info:hover {
  background-color: #afd9ee;
  }
.bg-warning {
  background-color: #fcf8e3;
  }
a.bg-warning:hover {
  background-color: #f7ecb5;
  }
.bg-danger {
  background-color: #f2dede;
  }
a.bg-danger:hover {
  background-color: #e4b9b9;
  }
.page-header {
  padding-bottom: 14px;
  margin: 60px 0 30px;
  border-bottom: 2px solid #e7e9ec;
  }
ul,
ol {
  margin-bottom: 15px;
  }
dl {
  margin-bottom: 30px;
  }
dt,
dd {
  line-height: 1.72222;
  }
@media (min-width: 768px) {
  .dl-horizontal dt {
    width: 160px;
    }
  .dl-horizontal dd {
    margin-left: 180px;
    }
  }
abbr[title],
abbr[data-original-title] {
  border-bottom: 1px dotted #bdc3c7;
  }
blockquote {
  padding: 0 0 0 16px;
  margin: 0 0 30px;
  border-left: 3px solid #e7e9ec;
  }
blockquote p {
  margin-bottom: .4em;
  font-size: 20px;
  font-weight: normal;
  line-height: 1.55;
  }
blockquote small,
blockquote .small {
  font-size: 18px;
  font-style: italic;
  line-height: 1.72222;
  color: inherit;
  }
blockquote small:before,
blockquote .small:before {
  content: "";
  }
blockquote.pull-right {
  padding-right: 16px;
  padding-left: 0;
  border-right: 3px solid #e7e9ec;
  border-left: 0;
  }
blockquote.pull-right small:after {
  content: "";
  }
address {
  margin-bottom: 30px;
  line-height: 1.72222;
  }
sub,
sup {
  font-size: 70%;
  }
code,
kbd,
pre,
samp {
  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
  }
code {
  padding: 2px 6px;
  font-size: 85%;
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 4px;
  }
kbd {
  padding: 2px 6px;
  font-size: 85%;
  color: #fff;
  background-color: #34495e;
  border-radius: 4px;
  box-shadow: none;
  }
pre {
  padding: 8px;
  margin: 0 0 15px;
  font-size: 13px;
  line-height: 1.72222;
  color: inherit;
  white-space: pre;
  background-color: #fff;
  border: 2px solid #e7e9ec;
  border-radius: 6px;
  }
.pre-scrollable {
  max-height: 340px;
  }
/* ... */

